--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="lightGray">#989CA0</color>
+    <color name="green">#77D353</color>
+    <color name="darkGreen">#5C9447</color>
+    <color name="darkGray">#202122</color>
 </resources>
