feat(home page): tabs system with two sub fragments

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -27,4 +27,8 @@
     <style name="TitleTextStyle" parent="SubtitleTextStyle">
         <item name="android:textSize">24sp</item>
     </style>
+
+    <style name="DescriptionStyle" parent="DefaultTextStyle">
+        <item name="android:textSize">12sp</item>
+    </style>
 </resources>
