--- a/app/src/main/res/layout/activity_subreddit.xml
+++ b/app/src/main/res/layout/activity_subreddit.xml
@@ -23,6 +23,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/header" />
 
+    <include
+        android:id="@+id/include4"
+        layout="@layout/list_filters"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/my_info" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
@@ -32,6 +40,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/my_info" />
+        app:layout_constraintTop_toBottomOf="@+id/include4" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
