--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -7,18 +7,8 @@
     tools:context=".activity.SettingsActivity">
 
     <include
-        android:id="@+id/include2"
-        layout="@layout/main_header" />
-
-    <Button
-        android:id="@+id/back_button"
-        android:layout_width="40dp"
-        android:layout_height="30dp"
-        android:background="@drawable/ic_baseline_arrow_forward_24"
-        app:layout_constraintEnd_toEndOf="@+id/include2"
-        android:layout_marginTop="5dp"
-        android:layout_marginRight="5dp"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:id="@+id/header"
+        layout="@layout/sub_header" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView2"
@@ -27,7 +17,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/include2">
+        app:layout_constraintTop_toBottomOf="@+id/header">
 
         <ImageView
             android:id="@+id/imageView2"
