--- a/app/src/main/res/layout/header_subreddit.xml
+++ b/app/src/main/res/layout/header_subreddit.xml
@@ -26,9 +26,9 @@
     </androidx.cardview.widget.CardView>
 
     <Button
-        android:id="@+id/button"
-        android:layout_width="40dp"
-        android:layout_height="35dp"
+        android:id="@+id/back_button"
+        android:layout_width="36dp"
+        android:layout_height="30dp"
         android:layout_marginLeft="5dp"
         android:layout_marginTop="5dp"
         android:background="@drawable/ic_baseline_arrow_back_24"
