--- a/app/src/main/res/layout/main_header.xml
+++ b/app/src/main/res/layout/main_header.xml
@@ -18,11 +18,11 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
-     android:layout_height="45dp"
+        android:layout_width="0dp"
+        android:layout_height="45dp"
         android:layout_weight="1"
-        android:text="REDDITECH"
-        style="@style/TitleTextStyle"
+        android:text="@string/app_title"
+        style="@style/LogoStyle"
         android:gravity="center_vertical"
         />
 
