--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -41,6 +41,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="15dp"
+        style="@style/SecondaryButtonStyle"
         app:srcCompat="@drawable/ic_baseline_search_24"
         android:contentDescription="@string/home_search_button" />
 </androidx.constraintlayout.widget.ConstraintLayout>
