--- a/app/src/main/res/drawable/reddit_icon_background.xml
+++ b/app/src/main/res/drawable/reddit_icon_background.xml
@@ -6,7 +6,7 @@
     android:viewportHeight="120">
   <group android:scaleX="1.1111112"
       android:scaleY="1.1111112">
-      <path android:fillColor="#3DDC84"
+      <path android:fillColor="#FFFF4500"
             android:pathData="M0,0h108v108h-108z"/>
       <path android:fillColor="#00000000" android:pathData="M9,0L9,108"
             android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
