--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -34,14 +34,14 @@
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/search_button"
-        android:layout_width="wrap_content"
+        style="@style/SecondaryButtonStyle"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:clickable="true"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="15dp"
-        style="@style/SecondaryButtonStyle"
-        app:srcCompat="@drawable/ic_baseline_search_24"
-        android:contentDescription="@string/home_search_button" />
+        android:clickable="true"
+        android:contentDescription="@string/home_search_button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/ic_baseline_search_24" />
 </androidx.constraintlayout.widget.ConstraintLayout>
