--- a/app/src/main/res/layout/home_tab_subreddit_item.xml
+++ b/app/src/main/res/layout/home_tab_subreddit_item.xml
@@ -8,8 +8,8 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_marginLeft="5dp"
         android:layout_marginTop="5dp"
         app:cardCornerRadius="50dp"
@@ -25,15 +25,25 @@
 
     <TextView
         android:id="@+id/title"
-        style="@style/SubtitleTextStyle"
+        style="@style/SmallTitleTextStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:text="Title title title title"
+        android:layout_marginStart="10dp"
+        android:text="r/subreddit"
         android:textAppearance="?attr/textAppearanceListItem"
         app:layout_constraintBottom_toBottomOf="@+id/cardView"
         app:layout_constraintLeft_toRightOf="@id/cardView"
         app:layout_constraintStart_toEndOf="@+id/cardView"
         app:layout_constraintTop_toTopOf="@+id/cardView" />
+
+    <TextView
+        style="@style/SubtitleTextStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
+        android:text="0 members"
+        app:layout_constraintBottom_toBottomOf="@+id/title"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/title" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
