--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="text_margin">16dp</dimen>
-    <dimen name="button_padding">16dp</dimen>
+    <dimen name="text_margin">10dp</dimen>
+    <dimen name="button_padding_big">20dp</dimen>
+    <dimen name="button_padding">10dp</dimen>
 </resources>
