--- a/app/src/main/res/drawable/button_background.xml
+++ b/app/src/main/res/drawable/button_background.xml
@@ -14,7 +14,7 @@
         </item>
         <item >
             <shape android:shape="rectangle"  >
-                <padding android:left="@dimen/button_padding" android:right="@dimen/button_padding" />
+                <padding android:left="@dimen/button_padding_big" android:right="@dimen/button_padding_big" />
                 <solid android:color="@color/primary"/>
                 <corners android:radius="100dp" />
 <!--                <stroke android:width="1dip" android:color="@color/primary" />-->
