--- a/app/src/main/res/layout/header_info_subreddit.xml
+++ b/app/src/main/res/layout/header_info_subreddit.xml
@@ -11,41 +11,45 @@
         style="@style/SubtitleTextStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Subreddit Title"
+        android:text="r/subreddit"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginStart="5dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
         />
 
     <TextView
         android:id="@+id/subreddit_desc"
         style="@style/DescriptionStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Description ...."
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginTop="5dp"
+        android:text="Description ...."
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
         app:layout_constraintStart_toStartOf="@+id/subreddit_title"
         app:layout_constraintTop_toBottomOf="@+id/subreddit_title" />
 
     <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_marginEnd="5dp"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="@+id/subreddit_title"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/subreddit_title"
-        >
+        app:layout_constraintTop_toTopOf="@+id/subreddit_title">
 
         <TextView
             android:id="@+id/header_nb_subscribers"
+            style="@style/DescriptionStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/subreddit_header_def_nb_subscribers"
             android:layout_marginEnd="5dp"
-            />
+            android:text="@string/subreddit_header_def_nb_subscribers" />
+
         <TextView
+            style="@style/DescriptionStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/nb_subscriber_label" />
