--- a/app/src/main/res/layout/header_subreddit.xml
+++ b/app/src/main/res/layout/header_subreddit.xml
@@ -27,9 +27,9 @@
 
     <Button
         android:id="@+id/back_button"
-        android:layout_width="36dp"
+        android:layout_width="34dp"
         android:layout_height="30dp"
-        android:layout_marginLeft="5dp"
+        android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
         android:background="@drawable/ic_baseline_arrow_back_24"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,15 +37,15 @@
 
     <Button
         android:id="@+id/subscribe_button"
+        style="@style/SecondaryButtonStyle"
         android:layout_width="wrap_content"
-        style="@style/DescriptionStyle"
-        android:padding="0dp"
-        android:layout_height="40dp"
-        android:text="Subscribe"
+        android:layout_height="25dp"
         android:layout_marginEnd="10dp"
-        app:layout_constraintBottom_toBottomOf="@+id/button"
+        android:text="@string/subscribe_button"
+        android:background="@drawable/button_background_blue"
+        app:layout_constraintBottom_toBottomOf="@+id/back_button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/button" />
+        app:layout_constraintTop_toTopOf="@+id/back_button" />
 
     <androidx.cardview.widget.CardView
         android:layout_width="40dp"
