--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -28,7 +28,7 @@
             app:layout_constraintTop_toBottomOf="@+id/header">
 
             <ImageView
-                android:id="@+id/imageView2"
+                android:id="@+id/account_picture"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 tools:srcCompat="@tools:sample/avatars" />
