--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <variable
             name="user"
             type="my.epi.redditech.model.api.UserModel" />
+        <variable
+            name="preferences"
+            type="my.epi.redditech.model.api.PrefModel" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".activity.SettingsActivity">
@@ -22,8 +25,9 @@
             android:id="@+id/cardView2"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="20dp"
+            app:cardCornerRadius="80dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/header">
 
@@ -31,28 +35,155 @@
                 android:id="@+id/account_picture"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:srcCompat="@tools:sample/avatars" />
+                app:srcCompat="@mipmap/reddit_icon"
+                tools:srcCompat="@mipmap/reddit_icon" />
         </androidx.cardview.widget.CardView>
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="40dp"
+            android:layout_marginStart="40dp"
             android:text="@{user.name}"
             app:layout_constraintBottom_toBottomOf="@+id/cardView2"
             app:layout_constraintStart_toEndOf="@+id/cardView2"
             app:layout_constraintTop_toTopOf="@+id/cardView2" />
 
         <TextView
-            android:id="@+id/textView5"
+            android:id="@+id/user_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            style="@style/DefaultTextStyle"
             android:layout_marginTop="20dp"
             android:text="@{user.subreddit.public_description}"
             app:layout_constraintStart_toStartOf="@+id/cardView2"
             app:layout_constraintTop_toBottomOf="@+id/cardView2" />
 
+        <TextView
+            android:id="@+id/settings_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/SubtitleTextStyle"
+            android:layout_marginTop="30dp"
+            android:text="@string/settings_section_title"
+            app:layout_constraintStart_toStartOf="@+id/user_description"
+            app:layout_constraintTop_toBottomOf="@+id/user_description" />
 
+        <Switch
+            android:id="@+id/switch_follow"
+            style="@style/DescriptionStyle"
+            android:checked="@{preferences.enable_followers}"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minWidth="@dimen/settings_min_width"
+            android:layout_marginTop="@dimen/settings_top_margin"
+            android:text="Enable followers: "
+            app:layout_constraintStart_toStartOf="@+id/settings_title"
+            app:layout_constraintTop_toBottomOf="@+id/settings_title"
+            tools:ignore="UseSwitchCompatOrMaterialXml" />
+
+        <Switch
+            android:id="@+id/switch_unsub_email"
+            style="@style/DescriptionStyle"
+            android:checked="@{preferences.email_unsubscribe_all}"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/settings_top_margin"
+            android:minWidth="@dimen/settings_min_width"
+            android:text="Unsubscribe from all email: "
+            app:layout_constraintStart_toStartOf="@+id/switch_follow"
+            app:layout_constraintTop_toBottomOf="@+id/switch_follow"
+            tools:ignore="UseSwitchCompatOrMaterialXml" />
+
+        <Switch
+            android:id="@+id/switch_adult"
+            style="@style/DescriptionStyle"
+            android:layout_width="wrap_content"
+            android:checked="@{preferences.over_18}"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/settings_top_margin"
+            android:minWidth="@dimen/settings_min_width"
+            android:text="Adult content: "
+            app:layout_constraintStart_toStartOf="@+id/switch_unsub_email"
+            app:layout_constraintTop_toBottomOf="@+id/switch_unsub_email"
+            tools:ignore="UseSwitchCompatOrMaterialXml" />
+
+        <Switch
+            android:id="@+id/switch_adult_search"
+            style="@style/DescriptionStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="@{preferences.search_include_over_18}"
+            android:layout_marginTop="@dimen/settings_top_margin"
+            android:minWidth="@dimen/settings_min_width"
+            android:text="Search include adult content: "
+            app:layout_constraintStart_toStartOf="@+id/switch_adult"
+            app:layout_constraintTop_toBottomOf="@+id/switch_adult"
+            tools:ignore="UseSwitchCompatOrMaterialXml" />
+
+        <Switch
+            android:id="@+id/switch_video_autoplay"
+            style="@style/DescriptionStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="@{preferences.video_autoplay}"
+            android:minWidth="@dimen/settings_min_width"
+            android:layout_marginTop="@dimen/settings_top_margin"
+            android:text="Video autoplay: "
+            app:layout_constraintStart_toStartOf="@+id/switch_adult_search"
+            app:layout_constraintTop_toBottomOf="@+id/switch_adult_search"
+            tools:ignore="UseSwitchCompatOrMaterialXml" />
+
+        <Switch
+            android:id="@+id/switch_data_perso_ads"
+            style="@style/DescriptionStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="@{preferences.third_party_data_personalized_ads}"
+            android:layout_marginTop="@dimen/settings_top_margin"
+            android:text="Third party data personalized adds: "
+            android:minWidth="@dimen/settings_min_width"
+            app:layout_constraintStart_toStartOf="@+id/switch_video_autoplay"
+            app:layout_constraintTop_toBottomOf="@+id/switch_video_autoplay"
+            tools:ignore="UseSwitchCompatOrMaterialXml" />
+
+        <Switch
+            android:id="@+id/switch_perso_ads"
+            style="@style/DescriptionStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="@{preferences.third_party_personalized_ads}"
+            android:layout_marginTop="@dimen/settings_top_margin"
+            android:minWidth="@dimen/settings_min_width"
+            android:text="Third party personalized ads : "
+            app:layout_constraintStart_toStartOf="@+id/switch_data_perso_ads"
+            app:layout_constraintTop_toBottomOf="@+id/switch_data_perso_ads"
+            tools:ignore="UseSwitchCompatOrMaterialXml" />
+
+        <Switch
+            android:id="@+id/switch_site_data_perso_ads"
+            style="@style/DescriptionStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="@{preferences.third_party_site_data_personalized_ads}"
+            android:layout_marginTop="@dimen/settings_top_margin"
+            android:minWidth="@dimen/settings_min_width"
+            android:text="Third party site data personalized ads: "
+            app:layout_constraintStart_toStartOf="@+id/switch_perso_ads"
+            app:layout_constraintTop_toBottomOf="@+id/switch_perso_ads"
+            tools:ignore="UseSwitchCompatOrMaterialXml" />
+
+        <Switch
+            android:id="@+id/switch_site_data_perso_content"
+            style="@style/DescriptionStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="@{preferences.third_party_site_data_personalized_content}"
+            android:layout_marginTop="@dimen/settings_top_margin"
+            android:text="Third party site data personalized content: "
+            android:minWidth="@dimen/settings_min_width"
+            app:layout_constraintStart_toStartOf="@+id/switch_site_data_perso_ads"
+            app:layout_constraintTop_toBottomOf="@+id/switch_site_data_perso_ads"
+            tools:ignore="UseSwitchCompatOrMaterialXml" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
