--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,6 @@
     <dimen name="text_margin">10dp</dimen>
     <dimen name="button_padding_big">20dp</dimen>
     <dimen name="button_padding">10dp</dimen>
+    <dimen name="settings_top_margin">15dp</dimen>
+    <dimen name="settings_min_width">300dp</dimen>
 </resources>
