--- a/app/src/main/res/layout/header_info_subreddit.xml
+++ b/app/src/main/res/layout/header_info_subreddit.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout>
+    <data>
+        <variable
+            name="subredditData"
+            type="my.epi.redditech.model.api.SubredditModel" />
+    </data>
+
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -11,7 +19,7 @@
         style="@style/SubtitleTextStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="r/subreddit"
+        android:text="@{subredditData.display_name_prefixed}"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginStart="10dp"
@@ -24,7 +32,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="5dp"
-        android:text="Description ...."
+        android:text="@{subredditData.public_description}"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
         app:layout_constraintStart_toStartOf="@+id/subreddit_title"
@@ -59,3 +67,4 @@
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
